<resources>
    <string name="app_name">Travel Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="sub_title">Your Holidays</string>
    <string name="places_api">AIzaSyDWFP7fOJRT92AHsMLxcBh344Hy-EKCM4Y</string>

    <string name="no_holidays">No Holidays available. Let\'s add one!</string>
    <string name="no_places">No places available. Let\'s add one!</string>

    <!-- Form Page for Holiday -->
    <string name="holiday_name_text">Holiday Name</string>
    <string name="holiday_start_date_text">Starting Date</string>
    <string name="holiday_end_date_text">End Date</string>
    <string name="holiday_notes_text">Notes about this holiday</string>
    <string name="holiday_save">Save Holiday</string>

    <!-- Form Page for Visited Places -->
    <string name="place_name_text">Place Name</string>
    <string name="place_date_text">Date of Visit</string>
    <string name="place_location_text">Place Location</string>
    <string name="place_notes_text">Notes about this place</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f
        <!--\n Timestamp: %3$tr"-->
    </string>
    <string name="save_place">Save Visited Place for this holiday</string>

    <!-- Toast Information -->
    <string name="empty_holiday_not_saved">Holiday Not Saved</string>
    <string name="empty_place_not_saved">Place Not Saved</string>

    <!-- Tab Text -->
    <string name="places_tab_text">Visited Places</string>
    <string name="explore_tab_text">Explore</string>
    <string name="gallery_tab_text">Gallery</string>

    <!-- Fragmented Information -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Card Placeholder Text -->
    <string name="card_name_placeholder">Card Text</string>
    <string name="card_last_update_placeholder">Last Updated: dd/mm/yyyy</string>
    <string name="card_notes_placeholder">This is sample text</string>
    <string name="no_notes">No additional information.</string>
    <string name="holiday_create_title">Create a new Holiday</string>
    <string name="title_activity_visited_place_detailed">VisitedPlaceDetailed</string>
    <string name="place_name_placeholder">Place Name</string>
    <string name="visited_placeholder">Visited at: dd/mm/yyyy</string>
    <string name="edit_place_button_text">Edit Visited Place</string>
    <string name="clear_all_holiday_data">Clear All Holiday Data</string>

    <!--  Location Related Text -->
    <string name="service_unavailable">Service Unavailable</string>
    <string name="invalid_data_geocode">Invalid Coordinates supplied to Geocoder</string>
    <string name="no_address_found">No address Found</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="loading">Loading</string>
    <string name="no_location">No Address Found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="share_place">Share Visited Place</string>
</resources>
