<?xml version="1.0" encoding="utf-8"?>

<!-- Template layout for the  -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/holidayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view_style"
            tools:text="@string/card_name_placeholder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/holidayUpdated"
            android:layout_below="@id/holidayName"
            android:text="@string/card_last_update_placeholder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/holidayNotes"
            android:layout_below="@id/holidayUpdated"
            android:text="@string/card_notes_placeholder"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
