<?xml version="1.0" encoding="utf-8"?>

<!-- Template layout for the RecyclerView Items -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/rightSide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/cardItemName"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_name_placeholder" />

                <TextView
                    android:id="@+id/cardItemLastUpdated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_last_update_placeholder" />

                <TextView
                    android:id="@+id/cardItemNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_notes" />
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>